k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: automata-app
  labels:
    name: automata-app
    app.kubernetes.io/name: automata
    app.kubernetes.io/version: "1.0.0"
    environment: production
